tried getting SDCARD to work

--- a/PROJ_3.ioc
+++ b/PROJ_3.ioc
@@ -250,6 +250,7 @@ ProjectManager.LPBAM.generateCode=
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
+ProjectManager.MultiThreaded=true
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
@@ -259,6 +260,7 @@ ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
+ProjectManager.ThreadSafeStrategy=CortexM33\:Default,
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
@@ -342,9 +344,11 @@ SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
 STMicroelectronics.X-CUBE-FREERTOS.1.0.1.CMSISJjRTOS2_Checked=true
-STMicroelectronics.X-CUBE-FREERTOS.1.0.1.IPParameters=RTOS2CcCMSISJjRTOS2JjCore,RTOS2CcCMSISJjRTOS2JjHeap
+STMicroelectronics.X-CUBE-FREERTOS.1.0.1.IPParameters=RTOS2CcCMSISJjRTOS2JjCore,RTOS2CcCMSISJjRTOS2JjHeap,configTOTAL_HEAP_SIZE,configENABLE_FPU
 STMicroelectronics.X-CUBE-FREERTOS.1.0.1.RTOS2CcCMSISJjRTOS2JjCore=TZIiNonIiSupported
 STMicroelectronics.X-CUBE-FREERTOS.1.0.1.RTOS2CcCMSISJjRTOS2JjHeap=HeapIi1
+STMicroelectronics.X-CUBE-FREERTOS.1.0.1.configENABLE_FPU=1
+STMicroelectronics.X-CUBE-FREERTOS.1.0.1.configTOTAL_HEAP_SIZE=0x80000
 STMicroelectronics.X-CUBE-FREERTOS.1.0.1_SwParameter=RTOS2CcCMSISJjRTOS2JjHeap\:HeapIi1;RTOS2CcCMSISJjRTOS2JjCore\:TZIiNonIiSupported;
 STMicroelectronics.X-CUBE-GNSS1.6.0.0.DataOoExchangeJjlibIignss_Checked=false
 STMicroelectronics.X-CUBE-GNSS1.6.0.0_SwParameter=libIignssCcDataOoExchangeJjlibIignssJjLibNMEA\:true;libIignssCcDataOoExchangeJjlibIignssJjInterface\:Template;libIignssCcDataOoExchangeJjlibIignssJjLibGNSS\:true;
