--- a/PROJ_3.ioc
+++ b/PROJ_3.ioc
@@ -63,41 +63,42 @@ Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (PC14)
 Mcu.Pin10=PF14
-Mcu.Pin11=PE11
-Mcu.Pin12=PB10
-Mcu.Pin13=PB11
-Mcu.Pin14=PG2
-Mcu.Pin15=PC7
-Mcu.Pin16=PA9
-Mcu.Pin17=PA10
-Mcu.Pin18=PA13 (JTMS/SWDIO)
-Mcu.Pin19=PA14 (JTCK/SWCLK)
+Mcu.Pin11=PG0
+Mcu.Pin12=PE11
+Mcu.Pin13=PB10
+Mcu.Pin14=PB11
+Mcu.Pin15=PG2
+Mcu.Pin16=PC7
+Mcu.Pin17=PA9
+Mcu.Pin18=PA10
+Mcu.Pin19=PA13 (JTMS/SWDIO)
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
-Mcu.Pin20=PC10
-Mcu.Pin21=PC11
-Mcu.Pin22=PC12
-Mcu.Pin23=PD2
-Mcu.Pin24=PB3 (JTDO/TRACESWO)
-Mcu.Pin25=PB7
-Mcu.Pin26=VP_ICACHE_VS_ICACHE
-Mcu.Pin27=VP_LPBAMQUEUE_VS_QUEUE
-Mcu.Pin28=VP_PWR_V_PVD_IN
-Mcu.Pin29=VP_PWR_VS_DBSignals
+Mcu.Pin20=PA14 (JTCK/SWCLK)
+Mcu.Pin21=PC10
+Mcu.Pin22=PC11
+Mcu.Pin23=PC12
+Mcu.Pin24=PD2
+Mcu.Pin25=PB3 (JTDO/TRACESWO)
+Mcu.Pin26=PB7
+Mcu.Pin27=VP_ICACHE_VS_ICACHE
+Mcu.Pin28=VP_LPBAMQUEUE_VS_QUEUE
+Mcu.Pin29=VP_PWR_V_PVD_IN
 Mcu.Pin3=PF0
-Mcu.Pin30=VP_PWR_VS_SECSignals
-Mcu.Pin31=VP_PWR_VS_LPOM
-Mcu.Pin32=VP_SYS_VS_tim1
-Mcu.Pin33=VP_LPBAM_VS_SIG1
-Mcu.Pin34=VP_LPBAM_VS_SIG4
-Mcu.Pin35=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin36=VP_STMicroelectronics.X-CUBE-FREERTOS_VS_CMSISJjRTOS2_10.4.6_1.0.1
+Mcu.Pin30=VP_PWR_VS_DBSignals
+Mcu.Pin31=VP_PWR_VS_SECSignals
+Mcu.Pin32=VP_PWR_VS_LPOM
+Mcu.Pin33=VP_SYS_VS_tim1
+Mcu.Pin34=VP_LPBAM_VS_SIG1
+Mcu.Pin35=VP_LPBAM_VS_SIG4
+Mcu.Pin36=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin37=VP_STMicroelectronics.X-CUBE-FREERTOS_VS_CMSISJjRTOS2_10.4.6_1.0.1
 Mcu.Pin4=PF1
 Mcu.Pin5=PF3
 Mcu.Pin6=PF5
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PF13
-Mcu.PinsNb=37
+Mcu.PinsNb=38
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-FREERTOS.1.0.1
 Mcu.ThirdParty1=STMicroelectronics.X-CUBE-GNSS1.6.0.0
 Mcu.ThirdPartyNb=2
@@ -164,11 +165,17 @@ PB7.GPIO_PuPd=GPIO_PULLUP
 PB7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB7.Locked=true
 PB7.Signal=GPIO_Output
+PC10.GPIOParameters=GPIO_Speed
+PC10.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC10.Mode=Full_Duplex_Master
 PC10.Signal=SPI3_SCK
+PC11.GPIOParameters=GPIO_Speed
+PC11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC11.Locked=true
 PC11.Mode=Full_Duplex_Master
 PC11.Signal=SPI3_MISO
+PC12.GPIOParameters=GPIO_Speed
+PC12.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC12.Mode=Full_Duplex_Master
 PC12.Signal=SPI3_MOSI
 PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
@@ -222,6 +229,10 @@ PF5.GPIOParameters=GPIO_Label
 PF5.GPIO_Label=IMU_INT
 PF5.Locked=true
 PF5.Signal=GPXTI5
+PG0.GPIOParameters=GPIO_Label
+PG0.GPIO_Label=DEBUG_TRIGGER
+PG0.Locked=true
+PG0.Signal=GPIO_Output
 PG2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PG2.GPIO_Label=LED_RED
 PG2.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
@@ -337,14 +348,16 @@ SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
-SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_64
-SPI3.CalculateBaudRate=250.0 KBits/s
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI3.CalculateBaudRate=4.0 MBits/s
 SPI3.Direction=SPI_DIRECTION_2LINES
-SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,NSSPMode,MasterKeepIOState
+SPI3.MasterKeepIOState=SPI_MASTER_KEEP_IO_STATE_ENABLE
 SPI3.Mode=SPI_MODE_MASTER
+SPI3.NSSPMode=SPI_NSS_PULSE_DISABLE
 SPI3.VirtualType=VM_MASTER
 STMicroelectronics.X-CUBE-FREERTOS.1.0.1.CMSISJjRTOS2_Checked=true
-STMicroelectronics.X-CUBE-FREERTOS.1.0.1.IPParameters=RTOS2CcCMSISJjRTOS2JjCore,RTOS2CcCMSISJjRTOS2JjHeap,configTOTAL_HEAP_SIZE,configENABLE_FPU
+STMicroelectronics.X-CUBE-FREERTOS.1.0.1.IPParameters=configTOTAL_HEAP_SIZE,configENABLE_FPU,RTOS2CcCMSISJjRTOS2JjCore,RTOS2CcCMSISJjRTOS2JjHeap
 STMicroelectronics.X-CUBE-FREERTOS.1.0.1.RTOS2CcCMSISJjRTOS2JjCore=TZIiNonIiSupported
 STMicroelectronics.X-CUBE-FREERTOS.1.0.1.RTOS2CcCMSISJjRTOS2JjHeap=HeapIi1
 STMicroelectronics.X-CUBE-FREERTOS.1.0.1.configENABLE_FPU=1
