--- a/PROJ_3.ioc
+++ b/PROJ_3.ioc
@@ -5,8 +5,10 @@ CAD.provider=
 CORTEX_M33_NS.userName=CORTEX_M33
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C2.IPParameters=Timing
-I2C2.Timing=0x30909DEC
+I2C2.I2C_Speed_Mode=I2C_Fast
+I2C2.IPParameters=Timing,I2C_Speed_Mode,Speed
+I2C2.Speed=100
+I2C2.Timing=0x30308AFF
 KeepUserPlacement=false
 MMTAppReg1.MEMORYMAP.AP=RW_priv_only
 MMTAppReg1.MEMORYMAP.AppRegionName=RAM
@@ -205,9 +207,15 @@ PE11.GPIO_Label=PTH_nCS
 PE11.Locked=true
 PE11.PinState=GPIO_PIN_SET
 PE11.Signal=GPIO_Output
+PF0.GPIOParameters=GPIO_Speed,GPIO_Pu
+PF0.GPIO_Pu=GPIO_PULLUP
+PF0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PF0.Locked=true
 PF0.Mode=I2C
 PF0.Signal=I2C2_SDA
+PF1.GPIOParameters=GPIO_Speed,GPIO_Pu
+PF1.GPIO_Pu=GPIO_PULLUP
+PF1.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PF1.Locked=true
 PF1.Mode=I2C
 PF1.Signal=I2C2_SCL
@@ -299,10 +307,11 @@ RCC.HSE_VALUE=16000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=160000000
+RCC.I2C2CLockSelection=RCC_I2C2CLKSOURCE_SYSCLK
 RCC.I2C2Freq_Value=160000000
 RCC.I2C3Freq_Value=160000000
 RCC.I2C4Freq_Value=160000000
-RCC.IPParameters=ADCFreq_Value,ADF1Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CK48Freq_Value,CRSFreq_Value,CortexFreq_Value,DACCLockSelectionVirtual,DACFreq_Value,EPOD_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSIDIV_VALUE,LSI_VALUE,MCO1PinFreq_Value,MDF1Freq_Value,MSI_VALUE,OCTOSPIMFreq_Value,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SPI1Freq_Value,SPI2Freq_Value,SPI3CLockSelection,SPI3Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
+RCC.IPParameters=ADCFreq_Value,ADF1Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CK48Freq_Value,CRSFreq_Value,CortexFreq_Value,DACCLockSelectionVirtual,DACFreq_Value,EPOD_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2CLockSelection,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSIDIV_VALUE,LSI_VALUE,MCO1PinFreq_Value,MDF1Freq_Value,MSI_VALUE,OCTOSPIMFreq_Value,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SPI1Freq_Value,SPI2Freq_Value,SPI3CLockSelection,SPI3Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
 RCC.LPTIM2Freq_Value=160000000
 RCC.LPUART1Freq_Value=160000000
 RCC.LSCOPinFreq_Value=32000
