--- a/PROJ_3.ioc
+++ b/PROJ_3.ioc
@@ -4,6 +4,11 @@ CAD.pinconfig=Project naming
 CAD.provider=
 CORTEX_M33_NS.userName=CORTEX_M33
 File.Version=6
+GPDMA1.DATAHANDLING_GPDMACH0=NONE
+GPDMA1.DESTINC_GPDMACH0=DMA_DINC_INCREMENTED
+GPDMA1.IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0=__NULL
+GPDMA1.IPParameters=IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0,REQUEST_GPDMACH0,DATAHANDLING_GPDMACH0,DESTINC_GPDMACH0
+GPDMA1.REQUEST_GPDMACH0=GPDMA1_REQUEST_USART2_RX
 GPIO.groupedBy=Group By Peripherals
 I2C2.I2C_Speed_Mode=I2C_Fast
 I2C2.IPParameters=Timing,I2C_Speed_Mode,Speed
@@ -46,20 +51,21 @@ Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32U5
 Mcu.IP0=CORTEX_M33_NS
 Mcu.IP1=DEBUG
-Mcu.IP10=SPI3
-Mcu.IP11=SYS
-Mcu.IP12=USART1
-Mcu.IP13=USART2
-Mcu.IP14=USART3
-Mcu.IP2=I2C2
-Mcu.IP3=ICACHE
-Mcu.IP4=LPBAM
-Mcu.IP5=LPBAMQUEUE
-Mcu.IP6=MEMORYMAP
-Mcu.IP7=NVIC
-Mcu.IP8=PWR
-Mcu.IP9=RCC
-Mcu.IPNb=15
+Mcu.IP10=RCC
+Mcu.IP11=SPI3
+Mcu.IP12=SYS
+Mcu.IP13=USART1
+Mcu.IP14=USART2
+Mcu.IP15=USART3
+Mcu.IP2=GPDMA1
+Mcu.IP3=I2C2
+Mcu.IP4=ICACHE
+Mcu.IP5=LPBAM
+Mcu.IP6=LPBAMQUEUE
+Mcu.IP7=MEMORYMAP
+Mcu.IP8=NVIC
+Mcu.IP9=PWR
+Mcu.IPNb=16
 Mcu.Name=STM32U575ZITxQ
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -82,25 +88,26 @@ Mcu.Pin23=PC12
 Mcu.Pin24=PD2
 Mcu.Pin25=PB3 (JTDO/TRACESWO)
 Mcu.Pin26=PB7
-Mcu.Pin27=VP_ICACHE_VS_ICACHE
-Mcu.Pin28=VP_LPBAMQUEUE_VS_QUEUE
-Mcu.Pin29=VP_PWR_V_PVD_IN
+Mcu.Pin27=VP_GPDMA1_VS_GPDMACH0
+Mcu.Pin28=VP_ICACHE_VS_ICACHE
+Mcu.Pin29=VP_LPBAMQUEUE_VS_QUEUE
 Mcu.Pin3=PF0
-Mcu.Pin30=VP_PWR_VS_DBSignals
-Mcu.Pin31=VP_PWR_VS_SECSignals
-Mcu.Pin32=VP_PWR_VS_LPOM
-Mcu.Pin33=VP_SYS_VS_tim1
-Mcu.Pin34=VP_LPBAM_VS_SIG1
-Mcu.Pin35=VP_LPBAM_VS_SIG4
-Mcu.Pin36=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin37=VP_STMicroelectronics.X-CUBE-FREERTOS_VS_CMSISJjRTOS2_10.4.6_1.0.1
+Mcu.Pin30=VP_PWR_V_PVD_IN
+Mcu.Pin31=VP_PWR_VS_DBSignals
+Mcu.Pin32=VP_PWR_VS_SECSignals
+Mcu.Pin33=VP_PWR_VS_LPOM
+Mcu.Pin34=VP_SYS_VS_tim1
+Mcu.Pin35=VP_LPBAM_VS_SIG1
+Mcu.Pin36=VP_LPBAM_VS_SIG4
+Mcu.Pin37=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin38=VP_STMicroelectronics.X-CUBE-FREERTOS_VS_CMSISJjRTOS2_10.4.6_1.0.1
 Mcu.Pin4=PF1
 Mcu.Pin5=PF3
 Mcu.Pin6=PF5
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PF13
-Mcu.PinsNb=38
+Mcu.PinsNb=39
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-FREERTOS.1.0.1
 Mcu.ThirdParty1=STMicroelectronics.X-CUBE-GNSS1.6.0.0
 Mcu.ThirdPartyNb=2
@@ -113,6 +120,7 @@ NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:fals
 NVIC.EXTI13_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.EXTI5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
+NVIC.GPDMA1_Channel0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -126,6 +134,7 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_UP_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM1_UP_IRQn
 NVIC.TimeBaseIP=TIM1
+NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA10.GPIO_Label=USART1_RX
@@ -284,7 +293,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_ICACHE_Init-ICACHE-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_ICACHE_Init-ICACHE-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=16000000
 RCC.ADF1Freq_Value=160000000
 RCC.AHBFreq_Value=160000000
@@ -377,12 +386,14 @@ STMicroelectronics.X-CUBE-GNSS1.6.0.0_SwParameter=libIignssCcDataOoExchangeJjlib
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.AutoBaudRateEnableParam=UART_ADVFEATURE_AUTOBAUDRATE_DISABLE
-USART2.BaudRate=9200
-USART2.FIFOMode=FIFOMODE_ENABLE
-USART2.IPParameters=VirtualMode-Asynchronous,AutoBaudRateEnableParam,BaudRate,FIFOMode
+USART2.BaudRate=9600
+USART2.FIFOMode=FIFOMODE_DISABLE
+USART2.IPParameters=VirtualMode-Asynchronous,AutoBaudRateEnableParam,FIFOMode,BaudRate
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
+VP_GPDMA1_VS_GPDMACH0.Mode=SIMPLEREQUEST_GPDMACH0
+VP_GPDMA1_VS_GPDMACH0.Signal=GPDMA1_VS_GPDMACH0
 VP_ICACHE_VS_ICACHE.Mode=DirectMappedCache
 VP_ICACHE_VS_ICACHE.Signal=ICACHE_VS_ICACHE
 VP_LPBAMQUEUE_VS_QUEUE.Mode=QUEUEMODE
