--- a/PROJ_3.ioc
+++ b/PROJ_3.ioc
@@ -242,8 +242,10 @@ PF3.GPIOParameters=GPIO_Label
 PF3.GPIO_Label=IMU_FSYNC
 PF3.Locked=true
 PF3.Signal=GPIO_Output
-PF5.GPIOParameters=GPIO_Label
+PF5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PF5.GPIO_Label=IMU_INT
+PF5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PF5.GPIO_PuPd=GPIO_PULLUP
 PF5.Locked=true
 PF5.Signal=GPXTI5
 PG0.GPIOParameters=GPIO_Label
