--- a/PROJ_3_old.ioc
+++ b/PROJ_3_old.ioc
@@ -4,9 +4,16 @@ CAD.pinconfig=Project naming
 CAD.provider=
 CORTEX_M33_NS.userName=CORTEX_M33
 File.Version=6
+GPDMA1.DATAHANDLING_GPDMACH0=NONE
+GPDMA1.DESTINC_GPDMACH0=DMA_DINC_INCREMENTED
+GPDMA1.IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0=__NULL
+GPDMA1.IPParameters=IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0,REQUEST_GPDMACH0,DATAHANDLING_GPDMACH0,DESTINC_GPDMACH0
+GPDMA1.REQUEST_GPDMACH0=GPDMA1_REQUEST_USART2_RX
 GPIO.groupedBy=Group By Peripherals
-I2C2.IPParameters=Timing
-I2C2.Timing=0x30909DEC
+I2C2.I2C_Speed_Mode=I2C_Fast
+I2C2.IPParameters=Timing,I2C_Speed_Mode,Speed
+I2C2.Speed=100
+I2C2.Timing=0x30308AFF
 KeepUserPlacement=false
 MMTAppReg1.MEMORYMAP.AP=RW_priv_only
 MMTAppReg1.MEMORYMAP.AppRegionName=RAM
@@ -44,70 +51,76 @@ Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32U5
 Mcu.IP0=CORTEX_M33_NS
 Mcu.IP1=DEBUG
-Mcu.IP10=SPI3
-Mcu.IP11=SYS
-Mcu.IP12=USART1
-Mcu.IP13=USART2
-Mcu.IP14=USART3
-Mcu.IP2=I2C2
-Mcu.IP3=ICACHE
-Mcu.IP4=LPBAM
-Mcu.IP5=LPBAMQUEUE
-Mcu.IP6=MEMORYMAP
-Mcu.IP7=NVIC
-Mcu.IP8=PWR
-Mcu.IP9=RCC
-Mcu.IPNb=15
+Mcu.IP10=RCC
+Mcu.IP11=SPI3
+Mcu.IP12=SYS
+Mcu.IP13=USART1
+Mcu.IP14=USART2
+Mcu.IP15=USART3
+Mcu.IP2=GPDMA1
+Mcu.IP3=I2C2
+Mcu.IP4=ICACHE
+Mcu.IP5=LPBAM
+Mcu.IP6=LPBAMQUEUE
+Mcu.IP7=MEMORYMAP
+Mcu.IP8=NVIC
+Mcu.IP9=PWR
+Mcu.IPNb=16
 Mcu.Name=STM32U575ZITxQ
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (PC14)
 Mcu.Pin10=PF14
-Mcu.Pin11=PE11
-Mcu.Pin12=PB10
-Mcu.Pin13=PB11
-Mcu.Pin14=PG2
-Mcu.Pin15=PC7
-Mcu.Pin16=PA9
-Mcu.Pin17=PA10
-Mcu.Pin18=PA13 (JTMS/SWDIO)
-Mcu.Pin19=PA14 (JTCK/SWCLK)
+Mcu.Pin11=PG0
+Mcu.Pin12=PE11
+Mcu.Pin13=PB10
+Mcu.Pin14=PB11
+Mcu.Pin15=PG2
+Mcu.Pin16=PC7
+Mcu.Pin17=PA9
+Mcu.Pin18=PA10
+Mcu.Pin19=PA13 (JTMS/SWDIO)
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
-Mcu.Pin20=PC10
-Mcu.Pin21=PC11
-Mcu.Pin22=PC12
-Mcu.Pin23=PD2
-Mcu.Pin24=PB3 (JTDO/TRACESWO)
-Mcu.Pin25=PB7
-Mcu.Pin26=VP_ICACHE_VS_ICACHE
-Mcu.Pin27=VP_LPBAMQUEUE_VS_QUEUE
-Mcu.Pin28=VP_PWR_VS_DBSignals
-Mcu.Pin29=VP_PWR_VS_SECSignals
+Mcu.Pin20=PA14 (JTCK/SWCLK)
+Mcu.Pin21=PC10
+Mcu.Pin22=PC11
+Mcu.Pin23=PC12
+Mcu.Pin24=PD2
+Mcu.Pin25=PB3 (JTDO/TRACESWO)
+Mcu.Pin26=PB7
+Mcu.Pin27=VP_GPDMA1_VS_GPDMACH0
+Mcu.Pin28=VP_ICACHE_VS_ICACHE
+Mcu.Pin29=VP_LPBAMQUEUE_VS_QUEUE
 Mcu.Pin3=PF0
-Mcu.Pin30=VP_PWR_VS_LPOM
-Mcu.Pin31=VP_SYS_VS_tim1
-Mcu.Pin32=VP_LPBAM_VS_SIG1
-Mcu.Pin33=VP_LPBAM_VS_SIG4
-Mcu.Pin34=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin35=VP_STMicroelectronics.X-CUBE-FREERTOS_VS_CMSISJjRTOS2_10.4.6_1.0.1
+Mcu.Pin30=VP_PWR_V_PVD_IN
+Mcu.Pin31=VP_PWR_VS_DBSignals
+Mcu.Pin32=VP_PWR_VS_SECSignals
+Mcu.Pin33=VP_PWR_VS_LPOM
+Mcu.Pin34=VP_SYS_VS_tim1
+Mcu.Pin35=VP_LPBAM_VS_SIG1
+Mcu.Pin36=VP_LPBAM_VS_SIG4
+Mcu.Pin37=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin38=VP_STMicroelectronics.X-CUBE-FREERTOS_VS_CMSISJjRTOS2_10.4.6_1.0.1
 Mcu.Pin4=PF1
 Mcu.Pin5=PF3
 Mcu.Pin6=PF5
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PF13
-Mcu.PinsNb=36
+Mcu.PinsNb=39
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-FREERTOS.1.0.1
-Mcu.ThirdPartyNb=1
+Mcu.ThirdParty1=STMicroelectronics.X-CUBE-GNSS1.6.0.0
+Mcu.ThirdPartyNb=2
 Mcu.UserConstants=GPS_UART,$$_USART2_IP_HANDLE_$$;MAVLINK,$$_USART3_IP_HANDLE_$$;SPI,$$_SPI3_IP_HANDLE_$$;I2C,$$_I2C2_IP_HANDLE_$$
 Mcu.UserName=STM32U575ZITxQ
-MxCube.Version=6.9.0
-MxDb.Version=DB.6.0.90
+MxCube.Version=6.10.0
+MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.EXTI13_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.EXTI5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
+NVIC.GPDMA1_Channel0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -121,6 +134,7 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_UP_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM1_UP_IRQn
 NVIC.TimeBaseIP=TIM1
+NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA10.GPIO_Label=USART1_RX
@@ -162,11 +176,17 @@ PB7.GPIO_PuPd=GPIO_PULLUP
 PB7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB7.Locked=true
 PB7.Signal=GPIO_Output
+PC10.GPIOParameters=GPIO_Speed
+PC10.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC10.Mode=Full_Duplex_Master
 PC10.Signal=SPI3_SCK
+PC11.GPIOParameters=GPIO_Speed
+PC11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC11.Locked=true
 PC11.Mode=Full_Duplex_Master
 PC11.Signal=SPI3_MISO
+PC12.GPIOParameters=GPIO_Speed
+PC12.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC12.Mode=Full_Duplex_Master
 PC12.Signal=SPI3_MOSI
 PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
@@ -196,9 +216,15 @@ PE11.GPIO_Label=PTH_nCS
 PE11.Locked=true
 PE11.PinState=GPIO_PIN_SET
 PE11.Signal=GPIO_Output
+PF0.GPIOParameters=GPIO_Speed,GPIO_Pu
+PF0.GPIO_Pu=GPIO_PULLUP
+PF0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PF0.Locked=true
 PF0.Mode=I2C
 PF0.Signal=I2C2_SDA
+PF1.GPIOParameters=GPIO_Speed,GPIO_Pu
+PF1.GPIO_Pu=GPIO_PULLUP
+PF1.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PF1.Locked=true
 PF1.Mode=I2C
 PF1.Signal=I2C2_SCL
@@ -216,10 +242,16 @@ PF3.GPIOParameters=GPIO_Label
 PF3.GPIO_Label=IMU_FSYNC
 PF3.Locked=true
 PF3.Signal=GPIO_Output
-PF5.GPIOParameters=GPIO_Label
+PF5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PF5.GPIO_Label=IMU_INT
+PF5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PF5.GPIO_PuPd=GPIO_PULLUP
 PF5.Locked=true
 PF5.Signal=GPXTI5
+PG0.GPIOParameters=GPIO_Label
+PG0.GPIO_Label=DEBUG_TRIGGER
+PG0.Locked=true
+PG0.Signal=GPIO_Output
 PG2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PG2.GPIO_Label=LED_RED
 PG2.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
@@ -248,20 +280,22 @@ ProjectManager.LPBAM.generateCode=
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
+ProjectManager.MultiThreaded=true
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=PROJ_3.ioc
-ProjectManager.ProjectName=PROJ_3
+ProjectManager.ProjectFileName=PROJ_3_old.ioc
+ProjectManager.ProjectName=PROJ_3_old
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
+ProjectManager.ThreadSafeStrategy=CortexM33\:Default,
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_MEMORYMAP_Init-MEMORYMAP-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_USART3_UART_Init-USART3-false-HAL-true,9-MX_ICACHE_Init-ICACHE-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_ICACHE_Init-ICACHE-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=16000000
 RCC.ADF1Freq_Value=160000000
 RCC.AHBFreq_Value=160000000
@@ -284,10 +318,11 @@ RCC.HSE_VALUE=16000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=160000000
+RCC.I2C2CLockSelection=RCC_I2C2CLKSOURCE_SYSCLK
 RCC.I2C2Freq_Value=160000000
 RCC.I2C3Freq_Value=160000000
 RCC.I2C4Freq_Value=160000000
-RCC.IPParameters=ADCFreq_Value,ADF1Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CK48Freq_Value,CRSFreq_Value,CortexFreq_Value,DACCLockSelectionVirtual,DACFreq_Value,EPOD_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSIDIV_VALUE,LSI_VALUE,MCO1PinFreq_Value,MDF1Freq_Value,MSI_VALUE,OCTOSPIMFreq_Value,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SPI1Freq_Value,SPI2Freq_Value,SPI3Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
+RCC.IPParameters=ADCFreq_Value,ADF1Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CK48Freq_Value,CRSFreq_Value,CortexFreq_Value,DACCLockSelectionVirtual,DACFreq_Value,EPOD_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2CLockSelection,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSIDIV_VALUE,LSI_VALUE,MCO1PinFreq_Value,MDF1Freq_Value,MSI_VALUE,OCTOSPIMFreq_Value,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SPI1Freq_Value,SPI2Freq_Value,SPI3CLockSelection,SPI3Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
 RCC.LPTIM2Freq_Value=160000000
 RCC.LPUART1Freq_Value=160000000
 RCC.LSCOPinFreq_Value=32000
@@ -313,7 +348,8 @@ RCC.SAI2Freq_Value=258000000
 RCC.SDMMCFreq_Value=160000000
 RCC.SPI1Freq_Value=160000000
 RCC.SPI2Freq_Value=160000000
-RCC.SPI3Freq_Value=160000000
+RCC.SPI3CLockSelection=RCC_SPI3CLKSOURCE_HSI
+RCC.SPI3Freq_Value=16000000
 RCC.SYSCLKFreq_VALUE=160000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.UART4Freq_Value=160000000
@@ -332,23 +368,34 @@ SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
-SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
-SPI3.CalculateBaudRate=5.0 MBits/s
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI3.CalculateBaudRate=4.0 MBits/s
 SPI3.Direction=SPI_DIRECTION_2LINES
-SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,NSSPMode,MasterKeepIOState
+SPI3.MasterKeepIOState=SPI_MASTER_KEEP_IO_STATE_DISABLE
 SPI3.Mode=SPI_MODE_MASTER
+SPI3.NSSPMode=SPI_NSS_PULSE_DISABLE
 SPI3.VirtualType=VM_MASTER
 STMicroelectronics.X-CUBE-FREERTOS.1.0.1.CMSISJjRTOS2_Checked=true
-STMicroelectronics.X-CUBE-FREERTOS.1.0.1.IPParameters=RTOS2CcCMSISJjRTOS2JjCore,RTOS2CcCMSISJjRTOS2JjHeap
+STMicroelectronics.X-CUBE-FREERTOS.1.0.1.IPParameters=configTOTAL_HEAP_SIZE,configENABLE_FPU,RTOS2CcCMSISJjRTOS2JjCore,RTOS2CcCMSISJjRTOS2JjHeap
 STMicroelectronics.X-CUBE-FREERTOS.1.0.1.RTOS2CcCMSISJjRTOS2JjCore=TZIiNonIiSupported
 STMicroelectronics.X-CUBE-FREERTOS.1.0.1.RTOS2CcCMSISJjRTOS2JjHeap=HeapIi1
+STMicroelectronics.X-CUBE-FREERTOS.1.0.1.configENABLE_FPU=1
+STMicroelectronics.X-CUBE-FREERTOS.1.0.1.configTOTAL_HEAP_SIZE=0x80000
 STMicroelectronics.X-CUBE-FREERTOS.1.0.1_SwParameter=RTOS2CcCMSISJjRTOS2JjHeap\:HeapIi1;RTOS2CcCMSISJjRTOS2JjCore\:TZIiNonIiSupported;
+STMicroelectronics.X-CUBE-GNSS1.6.0.0.DataOoExchangeJjlibIignss_Checked=false
+STMicroelectronics.X-CUBE-GNSS1.6.0.0_SwParameter=libIignssCcDataOoExchangeJjlibIignssJjLibNMEA\:true;libIignssCcDataOoExchangeJjlibIignssJjInterface\:Template;libIignssCcDataOoExchangeJjlibIignssJjLibGNSS\:true;
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
-USART2.IPParameters=VirtualMode-Asynchronous
+USART2.AutoBaudRateEnableParam=UART_ADVFEATURE_AUTOBAUDRATE_DISABLE
+USART2.BaudRate=9600
+USART2.FIFOMode=FIFOMODE_DISABLE
+USART2.IPParameters=VirtualMode-Asynchronous,AutoBaudRateEnableParam,FIFOMode,BaudRate
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
+VP_GPDMA1_VS_GPDMACH0.Mode=SIMPLEREQUEST_GPDMACH0
+VP_GPDMA1_VS_GPDMACH0.Signal=GPDMA1_VS_GPDMACH0
 VP_ICACHE_VS_ICACHE.Mode=DirectMappedCache
 VP_ICACHE_VS_ICACHE.Signal=ICACHE_VS_ICACHE
 VP_LPBAMQUEUE_VS_QUEUE.Mode=QUEUEMODE
@@ -365,6 +412,8 @@ VP_PWR_VS_LPOM.Mode=PowerOptimisation
 VP_PWR_VS_LPOM.Signal=PWR_VS_LPOM
 VP_PWR_VS_SECSignals.Mode=Security/Privilege
 VP_PWR_VS_SECSignals.Signal=PWR_VS_SECSignals
+VP_PWR_V_PVD_IN.Mode=Mode_PVD_Int
+VP_PWR_V_PVD_IN.Signal=PWR_V_PVD_IN
 VP_STMicroelectronics.X-CUBE-FREERTOS_VS_CMSISJjRTOS2_10.4.6_1.0.1.Mode=CMSISJjRTOS2
 VP_STMicroelectronics.X-CUBE-FREERTOS_VS_CMSISJjRTOS2_10.4.6_1.0.1.Signal=STMicroelectronics.X-CUBE-FREERTOS_VS_CMSISJjRTOS2_10.4.6_1.0.1
 VP_SYS_VS_tim1.Mode=TIM1
@@ -372,5 +421,4 @@ VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 board=NUCLEO-U575ZI-Q
 boardIOC=true
 rtos.0.ip=STMicroelectronics.X-CUBE-FREERTOS.1.0.1
-rtos.0.tasks.0=allocationType,Dynamic;bufferName,NULL;codeGen,Default;controlBlockName,NULL;entry,StartDefaultTask;name,defaultTask;parameter,NULL;priority,osPriorityNormal;stackSize,128
-isbadioc=false
+rtos.0.tasks.0=allocationType,Dynamic;bufferName,NULL;codeGen,Default;controlBlockName,NULL;entry,StartDefaultTask;name,mainTask;parameter,NULL;priority,osPriorityNormal;stackSize,128
