--- a/PROJ_3.ioc
+++ b/PROJ_3.ioc
@@ -222,7 +222,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_ICACHE_Init-ICACHE-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=16000000
 RCC.CK48Freq_Value=48000000
 RCC.CRSFreq_Value=48000000
@@ -273,7 +273,7 @@ SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 STMicroelectronics.X-CUBE-FREERTOS.1.1.0.CMSISJjRTOS2_Checked=true
-STMicroelectronics.X-CUBE-FREERTOS.1.1.0.IPParameters=RTOS2CcCMSISJjRTOS2JjHeap,RTOS2CcCMSISJjRTOS2JjCore
+STMicroelectronics.X-CUBE-FREERTOS.1.1.0.IPParameters=RTOS2CcCMSISJjRTOS2JjCore,RTOS2CcCMSISJjRTOS2JjHeap
 STMicroelectronics.X-CUBE-FREERTOS.1.1.0.RTOS2CcCMSISJjRTOS2JjCore=TZIiNonIiSupported
 STMicroelectronics.X-CUBE-FREERTOS.1.1.0.RTOS2CcCMSISJjRTOS2JjHeap=HeapIi1
 STMicroelectronics.X-CUBE-FREERTOS.1.1.0_SwParameter=RTOS2CcCMSISJjRTOS2JjHeap\:HeapIi1;RTOS2CcCMSISJjRTOS2JjCore\:TZIiNonIiSupported;
@@ -302,3 +302,4 @@ VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 board=custom
 rtos.0.ip=STMicroelectronics.X-CUBE-FREERTOS.1.1.0
 rtos.0.tasks.0=allocationType,Dynamic;bufferName,NULL;codeGen,Default;controlBlockName,NULL;entry,StartDefaultTask;name,defaultTask;parameter,NULL;priority,osPriorityNormal;stackSize,128
+isbadioc=false
