--- a/PROJ_3.ioc
+++ b/PROJ_3.ioc
@@ -110,6 +110,7 @@ MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.EXTI15_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.EXTI8_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.GPDMA1_Channel0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
@@ -195,11 +196,13 @@ PB8.GPIO_Label=SW_ACTIVE
 PB8.Locked=true
 PB8.Signal=GPXTI8
 PC14-OSC32_IN\ (PC14).GPIOParameters=GPIO_Label
-PC14-OSC32_IN\ (PC14).GPIO_Label=I_MON
+PC14-OSC32_IN\ (PC14).GPIO_Label=PS_I_MON
 PC14-OSC32_IN\ (PC14).Locked=true
 PC14-OSC32_IN\ (PC14).Signal=GPIO_Analog
-PC15-OSC32_OUT\ (PC15).GPIOParameters=GPIO_Label
-PC15-OSC32_OUT\ (PC15).GPIO_Label=PS_FLT_N
+PC15-OSC32_OUT\ (PC15).GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PC15-OSC32_OUT\ (PC15).GPIO_Label=PS_nFLT
+PC15-OSC32_OUT\ (PC15).GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PC15-OSC32_OUT\ (PC15).GPIO_PuPd=GPIO_PULLUP
 PC15-OSC32_OUT\ (PC15).Locked=true
 PC15-OSC32_OUT\ (PC15).Signal=GPXTI15
 PH3-BOOT0.GPIOParameters=GPIO_Label
@@ -324,7 +327,7 @@ SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 STMicroelectronics.X-CUBE-FREERTOS.1.1.0.CMSISJjRTOS2_Checked=true
-STMicroelectronics.X-CUBE-FREERTOS.1.1.0.IPParameters=configTOTAL_HEAP_SIZE,RTOS2CcCMSISJjRTOS2JjCore,RTOS2CcCMSISJjRTOS2JjHeap,configENABLE_FPU
+STMicroelectronics.X-CUBE-FREERTOS.1.1.0.IPParameters=configTOTAL_HEAP_SIZE,configENABLE_FPU,RTOS2CcCMSISJjRTOS2JjCore,RTOS2CcCMSISJjRTOS2JjHeap
 STMicroelectronics.X-CUBE-FREERTOS.1.1.0.RTOS2CcCMSISJjRTOS2JjCore=TZIiNonIiSupported
 STMicroelectronics.X-CUBE-FREERTOS.1.1.0.RTOS2CcCMSISJjRTOS2JjHeap=HeapIi1
 STMicroelectronics.X-CUBE-FREERTOS.1.1.0.configENABLE_FPU=1
