--- a/PROJ_3.ioc
+++ b/PROJ_3.ioc
@@ -137,9 +137,10 @@ PA1.Mode=Full_Duplex_Master
 PA1.Signal=SPI1_SCK
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-PA11.GPIOParameters=GPIO_Label
+PA11.GPIOParameters=PinState,GPIO_Label
 PA11.GPIO_Label=RPI_nCS
 PA11.Locked=true
+PA11.PinState=GPIO_PIN_SET
 PA11.Signal=GPIO_Output
 PA12.Mode=Full_Duplex_Master
 PA12.Signal=SPI1_MOSI
@@ -158,15 +159,17 @@ PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Asynchronous
 PA7.Signal=USART3_TX
-PA8.GPIOParameters=GPIO_Label
+PA8.GPIOParameters=PinState,GPIO_Label
 PA8.GPIO_Label=PTH_nCS
 PA8.Locked=true
+PA8.PinState=GPIO_PIN_SET
 PA8.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB1.GPIOParameters=GPIO_Label
+PB1.GPIOParameters=PinState,GPIO_Label
 PB1.GPIO_Label=SD_nCS
 PB1.Locked=true
+PB1.PinState=GPIO_PIN_SET
 PB1.Signal=GPIO_Output
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=IMU_FSYNC
@@ -176,9 +179,10 @@ PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=IMU_INT
 PB14.Locked=true
 PB14.Signal=GPXTI14
-PB15.GPIOParameters=GPIO_Label
+PB15.GPIOParameters=PinState,GPIO_Label
 PB15.GPIO_Label=IMU_nCS
 PB15.Locked=true
+PB15.PinState=GPIO_PIN_SET
 PB15.Signal=GPIO_Output
 PB3\ (JTDO/TRACESWO).Mode=Trace_Asynchronous_SW
 PB3\ (JTDO/TRACESWO).Signal=DEBUG_JTDO-SWO
@@ -335,8 +339,12 @@ STMicroelectronics.X-CUBE-FREERTOS.1.1.0.configTOTAL_HEAP_SIZE=0x80000
 STMicroelectronics.X-CUBE-FREERTOS.1.1.0_SwParameter=RTOS2CcCMSISJjRTOS2JjHeap\:HeapIi1;RTOS2CcCMSISJjRTOS2JjCore\:TZIiNonIiSupported;
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
+USART2.AutoBaudRateEnableParam=UART_ADVFEATURE_AUTOBAUDRATE_DISABLE
+USART2.AutonomousMode=AUTONOMOUS_MODE_DISABLE
 USART2.BaudRate=9600
-USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
+USART2.FIFOMode=FIFOMODE_ENABLE
+USART2.IPParameters=VirtualMode-Asynchronous,SwapParam,FIFOMode,AutoBaudRateEnableParam,AutonomousMode,BaudRate
+USART2.SwapParam=ADVFEATURE_SWAP_DISABLE
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART3.ClockPrescaler=PRESCALER_DIV1
 USART3.IPParameters=VirtualMode-Asynchronous,SwapParam,ClockPrescaler
