--- a/PROJ_3.ioc
+++ b/PROJ_3.ioc
@@ -195,8 +195,9 @@ PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
-PB8.GPIOParameters=GPIO_Label
+PB8.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PB8.GPIO_Label=SW_ACTIVE
+PB8.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB8.Locked=true
 PB8.Signal=GPXTI8
 PC14-OSC32_IN\ (PC14).GPIOParameters=GPIO_Label
@@ -247,7 +248,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_ICACHE_Init-ICACHE-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,10-MX_LPTIM1_Init-LPTIM1-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_ICACHE_Init-ICACHE-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=16000000
 RCC.ADF1Freq_Value=16000000
 RCC.AHBFreq_Value=16000000
