--- a/PROJ_3.ioc
+++ b/PROJ_3.ioc
@@ -9,7 +9,8 @@ GPDMA1.IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0=__NULL
 GPDMA1.IPParameters=IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0,REQUEST_GPDMACH0,DESTINC_GPDMACH0
 GPDMA1.REQUEST_GPDMACH0=GPDMA1_REQUEST_USART2_RX
 GPIO.groupedBy=Group By Peripherals
-I2C1.IPParameters=Timing
+I2C1.AutonomousMode=AUTONOMOUS_MODE_DISABLE
+I2C1.IPParameters=Timing,AutonomousMode
 I2C1.Timing=0x00303D5B
 KeepUserPlacement=false
 MMTAppReg1.MEMORYMAP.AP=RW_priv_only
@@ -115,6 +116,7 @@ NVIC.EXTI8_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.GPDMA1_Channel0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.I2C1_EV_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
